# charity_nepal

./: .env  API_DOCUMENTATION.md  Dockerfile  ML_TESTING_GUIDE.md  PROJECT_COMPLETE.md  README.md  check_db.py  db.sqlite3  deploy.sh  docker-compose.yml  main.py  pyproject.toml  refrence_index.html  requirement.md  run_tests.py  test_api.py  test_khalti_integration.py
cases/: admin.py  api_views.py  django_views.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
cases/migrations/: 0001_initial.py  0002_initial.py  0003_charitycase_fraud_score_and_more.py
cases/templatetags/: math_extras.py
charity_backend/: admin.py  celery.py  dashboard_views.py  health.py  settings.py  urls.py
docs/: API_DOCUMENTATION.md  ML_ALGORITHMS_DOCUMENTATION.md  ML_IMPLEMENTATION_GUIDE.md  ML_IMPLEMENTATION_MAP.md  PROJECT_COMPLETE.md  SEARCH_ALGORITHM_DOCUMENTATION.md
donations/: admin.py  api_views.py  forms.py  khalti_utils.py  models.py  serializers.py  tests_integration.py  urls.py  views.py
donations/migrations/: 0001_initial.py  0002_initial.py  0003_alter_recommendationhistory_unique_together_and_more.py  0004_delete_recommendationhistory.py  (+1 more)
payments/: admin.py  models.py  serializers.py  urls.py  views.py
recommendations/: admin.py  algorithms.py  ml_analytics.py  models.py  serializers.py  urls.py  views.py
templates/: about.html  base.html  contact.html  home.html  home_backup.html  home_new.html
templates/admin/: index.html  (+2 more)
users/: admin.py  api_views.py  django_views.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+28 files in other folders)
